# configurator

./: Cargo.toml  README.md  shell.nix
src/: bluetooth.rs  display.rs  lens.rs  lib.rs  main.rs  model.rs  monitor_view.rs
src/model/: bluetooth.rs  display.rs  mod.rs
src/widgets/: display.rs
