[package]
name = "configurator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = {git = "https://github.com/linebender/druid.git", rev = "aa4b36658be4164f2a30ffebeef434638dbfc4f8", features = ["im"] }
home = "^0.5"
structopt = "0.3.2"
swayipc = "^3.0"
blurz = "^0.4"
futures = "^0.3"